Comments function added

--- a/app/views/washer/index.html.erb
+++ b/app/views/washer/index.html.erb
@@ -25,7 +25,7 @@
                 </div>
                 <div class="form-group col-md-4 ">
                   <label for="where" class="where">Where</label>
-                  <input type="text" class="form-control search-city" name="city" id="city" placeholder="Los Angeles, Kansas, etc">
+                  <input type="text" class="form-control search-city" name="where" id="city" placeholder="Los Angeles, Kansas, etc">
                 </div>
                 <div class="col-md-2">
                   <button type="submit" id="search-list" class="btn btn-lg btn-success search-button"><i class="fas fa-search"></i> Search</button>
