--- a/app/views/washer/_navbar.html.erb
+++ b/app/views/washer/_navbar.html.erb
@@ -11,12 +11,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          EXPLORE <i class="fas fa-chevron-down"></i>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="modal" data-target="#exampleModalCenter">
+          EXPLORE
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" data-toggle="modal" data-target="#exampleModalCenter">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">BLOG</a>
