--- a/app/views/washer/_city.html.erb
+++ b/app/views/washer/_city.html.erb
@@ -1,136 +1,136 @@
  <div class="col">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a href="/city/new-york">New York</a></li>
-        <li class="list-group-item"><a href="/city/albuquerque">Albuquerque</a></li>
-        <li class="list-group-item"><a href="/city/san-jose">San Jose</a></li>
-        <li class="list-group-item"><a href="/city/fort-worth">Fort Worth</a></li>
-        <li class="list-group-item"><a href="/city/milwaukee">Milwaukee</a></li>
-        <li class="list-group-item"><a href="/city/nashville">Nashville</a></li>
-        <li class="list-group-item"><a href="/city/baltimore">Baltimore</a></li>
-        <li class="list-group-item"><a href="/city/saint-paul">Saint Paul</a></li>
-        <li class="list-group-item"><a href="/city/raleigh">Raleigh</a></li>
-        <li class="list-group-item"><a href="/city/boston">Boston</a></li>
-        <li class="list-group-item"><a href="/city/salt-lake-city">Salt Lake City</a></li>
-        <li class="list-group-item"><a href="/city/tulsa">Tulsa</a></li>
+        <li class="list-group-item"><a href="/new-york/new-york">New York</a></li>
+        <li class="list-group-item"><a href="/new-mexico/albuquerque">Albuquerque</a></li>
+        <li class="list-group-item"><a href="/california/san-jose">San Jose</a></li>
+        <li class="list-group-item"><a href="/texas/fort-worth">Fort Worth</a></li>
+        <li class="list-group-item"><a href="/wisconsin/milwaukee">Milwaukee</a></li>
+        <li class="list-group-item"><a href="/tennessee/nashville">Nashville</a></li>
+        <li class="list-group-item"><a href="/maryland/baltimore">Baltimore</a></li>
+        <li class="list-group-item"><a href="/minnesota/saint-paul">Saint Paul</a></li>
+        <li class="list-group-item"><a href="/north-carolina/raleigh">Raleigh</a></li>
+        <li class="list-group-item"><a href="/massachusetts/boston">Boston</a></li>
+        <li class="list-group-item"><a href="/utah/salt-lake-city">Salt Lake City</a></li>
+        <li class="list-group-item"><a href="/oklahoma/tulsa">Tulsa</a></li>
       </ul> 
  </div>
  <div class="col">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a href="/city/brooklyn">Brooklyn</a></li>
-        <li class="list-group-item"><a href="/city/chicago">Chicago</a></li>
-        <li class="list-group-item"><a href="/city/houston">Houston</a></li>
-        <li class="list-group-item"><a href="/city/san-francisco">San Francisco</a></li>
-        <li class="list-group-item"><a href="/city/seattle">Seattle</a></li>
-        <li class="list-group-item"><a href="/city/atlanta">Atlanta</a></li>
-        <li class="list-group-item"><a href="/city/los-angeles">Los Angeles</a></li>
-        <li class="list-group-item"><a href="/city/philadelphia">Philadelphia</a></li>
-        <li class="list-group-item"><a href="/city/dallas">Dallas</a></li>
-        <li class="list-group-item"><a href="/city/las-vegas">Las Vegas</a></li>
-        <li class="list-group-item"><a href="/city/orlando">Orlando</a></li>
-        <li class="list-group-item"><a href="/city/san-antonio">San Antonio</a></li>
+        <li class="list-group-item"><a href="/new-york/brooklyn">Brooklyn</a></li>
+        <li class="list-group-item"><a href="/illinois/chicago">Chicago</a></li>
+        <li class="list-group-item"><a href="/texas/houston">Houston</a></li>
+        <li class="list-group-item"><a href="/california/san-francisco">San Francisco</a></li>
+        <li class="list-group-item"><a href="/washington/seattle">Seattle</a></li>
+        <li class="list-group-item"><a href="/georgia/atlanta">Atlanta</a></li>
+        <li class="list-group-item"><a href="/california/los-angeles">Los Angeles</a></li>
+        <li class="list-group-item"><a href="/pennsylvania/philadelphia">Philadelphia</a></li>
+        <li class="list-group-item"><a href="/texas/dallas">Dallas</a></li>
+        <li class="list-group-item"><a href="/nevada/las-vegas">Las Vegas</a></li>
+        <li class="list-group-item"><a href="/florida/orlando">Orlando</a></li>
+        <li class="list-group-item"><a href="/texas/san-antonio">San Antonio</a></li>   
       </ul> 
  </div>
  <div class="col">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a href="/city/denver">Denver</a></li>
-        <li class="list-group-item"><a href="/city/austin">Austin</a></li>
-        <li class="list-group-item"><a href="/city/saint-louis">Saint Louis</a></li>
-        <li class="list-group-item"><a href="/city/tampa">Tampa</a></li>
-        <li class="list-group-item"><a href="/city/washington">Washington</a></li>
-        <li class="list-group-item"><a href="/city/jacksonville">Jacksonville</a></li>
-        <li class="list-group-item"><a href="/city/columbus">Columbus</a></li>
-        <li class="list-group-item"><a href="/city/pittsburgh">Pittsburgh</a></li>
-        <li class="list-group-item"><a href="/city/phoenix">Phoenix</a></li>
-        <li class="list-group-item"><a href="/city/san-diego">San Diego</a></li>
-        <li class="list-group-item"><a href="/city/charlotte">Charlotte</a></li>
-        <li class="list-group-item"><a href="/city/indianapolis">Indianapolis</a></li>
+        <li class="list-group-item"><a href="/colorado/denver">Denver</a></li>
+        <li class="list-group-item"><a href="/texas/austin">Austin</a></li>
+        <li class="list-group-item"><a href="/missouri/saint-louis">Saint Louis</a></li>
+        <li class="list-group-item"><a href="/florida/tampa">Tampa</a></li>
+        <li class="list-group-item"><a href="/washington/washington">Washington</a></li>
+        <li class="list-group-item"><a href="/florida/jacksonville">Jacksonville</a></li>
+        <li class="list-group-item"><a href="/ohio/columbus">Columbus</a></li>
+        <li class="list-group-item"><a href="/pennsylvania/pittsburgh">Pittsburgh</a></li>
+        <li class="list-group-item"><a href="/arizona/phoenix">Phoenix</a></li>
+        <li class="list-group-item"><a href="/california/san-diego">San Diego</a></li>
+        <li class="list-group-item"><a href="/carolina/charlotte">Charlotte</a></li>
+        <li class="list-group-item"><a href="/indiana/indianapolis">Indianapolis</a></li>  
       </ul> 
  </div>
  <div class="col">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a href="/city/marietta">Marietta</a></li>
-        <li class="list-group-item"><a href="/city/naples">Naples</a></li>
-        <li class="list-group-item"><a href="/city/bakersfield">Bakersfield</a></li>
-        <li class="list-group-item"><a href="/city/columbia">Columbia</a></li>
-        <li class="list-group-item"><a href="/city/mesa">Mesa</a></li>
-        <li class="list-group-item"><a href="/city/lexington">Lexington</a></li>
-        <li class="list-group-item"><a href="/city/oakland">Oakland</a></li>
-        <li class="list-group-item"><a href="/city/boca-raton">Boca Raton</a></li>
-        <li class="list-group-item"><a href="/city/greensboro">Greensboro</a></li>
-        <li class="list-group-item"><a href="/city/fort-myers">Fort Myers</a></li>
-        <li class="list-group-item"><a href="/city/long-beach">Long Beach</a></li>
-        <li class="list-group-item"><a href="/city/irvine">Irvine</a></li>
+        <li class="list-group-item"><a href="/georgia/marietta">Marietta</a></li>
+        <li class="list-group-item"><a href="/florida/naples">Naples</a></li>
+        <li class="list-group-item"><a href="/california/bakersfield">Bakersfield</a></li>
+        <li class="list-group-item"><a href="/carolina/columbia">Columbia</a></li>
+        <li class="list-group-item"><a href="/arizona/mesa">Mesa</a></li>
+        <li class="list-group-item"><a href="/kentucky/lexington">Lexington</a></li>
+        <li class="list-group-item"><a href="/california/oakland">Oakland</a></li>
+        <li class="list-group-item"><a href="/florida/boca-raton">Boca Raton</a></li>
+        <li class="list-group-item"><a href="/carolina/greensboro">Greensboro</a></li>
+        <li class="list-group-item"><a href="/florida/fort-myers">Fort Myers</a></li>
+        <li class="list-group-item"><a href="/california/long-beach">Long Beach</a></li>
+        <li class="list-group-item"><a href="/california/irvine">Irvine</a></li>
       </ul> 
  </div>
  <div class="col">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a href="/city/miami">Miami</a></li>
-        <li class="list-group-item"><a href="/city/cincinnati">Cincinnati</a></li>
-        <li class="list-group-item"><a href="/city/tucson">Tucson</a></li>
-        <li class="list-group-item"><a href="/city/louisville">Louisville</a></li>
-        <li class="list-group-item"><a href="/city/sacramento">Sacramento</a></li>
-        <li class="list-group-item"><a href="/city/bronx">Bronx</a></li>
-        <li class="list-group-item"><a href="/city/memphis">Memphis</a></li>
-        <li class="list-group-item"><a href="/city/cleveland">Cleveland</a></li>
-        <li class="list-group-item"><a href="/city/oklahoma-city">Oklahoma City</a></li>
-        <li class="list-group-item"><a href="/city/portland">Portland</a></li>
-        <li class="list-group-item"><a href="/city/minneapolis">Minneapolis</a></li>
+        <li class="list-group-item"><a href="/florida/miami">Miami</a></li>
+        <li class="list-group-item"><a href="/ohio/cincinnati">Cincinnati</a></li>
+        <li class="list-group-item"><a href="/arizona/tucson">Tucson</a></li>
+        <li class="list-group-item"><a href="/kentucky/louisville">Louisville</a></li>
+        <li class="list-group-item"><a href="/california/sacramento">Sacramento</a></li>
+        <li class="list-group-item"><a href="/new-york/bronx">Bronx</a></li>
+        <li class="list-group-item"><a href="/tennessee/memphis">Memphis</a></li>
+        <li class="list-group-item"><a href="/ohio/cleveland">Cleveland</a></li>
+        <li class="list-group-item"><a href="/oklahoma/oklahoma-city">Oklahoma City</a></li>
+        <li class="list-group-item"><a href="/oregon/portland">Portland</a></li>
+        <li class="list-group-item"><a href="/minnesota/minneapolis">Minneapolis</a></li>
       </ul> 
  </div>
  <div class="col">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a href="/city/scottsdale">Scottsdale</a></li>
-        <li class="list-group-item"><a href="/city/honolulu">Honolulu</a></li>
-        <li class="list-group-item"><a href="/city/new-orleans">New Orleans</a></li>
-        <li class="list-group-item"><a href="/city/baton-rouge">Baton Rouge</a></li>
-        <li class="list-group-item"><a href="/city/virginia-beach">Virginia Beach</a></li>
-        <li class="list-group-item"><a href="/city/grand-rapids">Grand Rapids</a></li>
-        <li class="list-group-item"><a href="/city/west-palm-beach">West Palm Beach</a></li>
-        <li class="list-group-item"><a href="/city/sarasota">Sarasota</a></li>
-        <li class="list-group-item"><a href="/city/wichita">Wichita</a></li>
-        <li class="list-group-item"><a href="/city/richmond">Richmond</a></li>
-        <li class="list-group-item"><a href="/city/dayton">Dayton</a></li>
+        <li class="list-group-item"><a href="/arizona/scottsdale">Scottsdale</a></li>
+        <li class="list-group-item"><a href="/hawaii/honolulu">Honolulu</a></li>
+        <li class="list-group-item"><a href="/louisiana/new-orleans">New Orleans</a></li>
+        <li class="list-group-item"><a href="/louisiana/baton-rouge">Baton Rouge</a></li>
+        <li class="list-group-item"><a href="/virginia/virginia-beach">Virginia Beach</a></li>
+        <li class="list-group-item"><a href="/michigan/grand-rapids">Grand Rapids</a></li>
+        <li class="list-group-item"><a href="/florida/west-palm-beach">West Palm Beach</a></li>
+        <li class="list-group-item"><a href="/florida/sarasota">Sarasota</a></li>
+        <li class="list-group-item"><a href="/kansas/wichita">Wichita</a></li>
+        <li class="list-group-item"><a href="/virginia/richmond">Richmond</a></li>
+        <li class="list-group-item"><a href="/ohio/dayton">Dayton</a></li>  
       </ul> 
  </div>
  <div class="col">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a href="/city/riverside">Riverside</a></li>
-        <li class="list-group-item"><a href="/city/little-rock">Little Rock</a></li>
-        <li class="list-group-item"><a href="/city/greenville">Greenville</a></li>
-        <li class="list-group-item"><a href="/city/chattanooga">Chattanooga</a></li>
-        <li class="list-group-item"><a href="/city/anchorage">Anchorage</a></li>
-        <li class="list-group-item"><a href="/city/madison">Madison</a></li>
-        <li class="list-group-item"><a href="/city/anaheim">Anaheim</a></li>
-        <li class="list-group-item"><a href="/city/hialeah">Hialeah</a></li>
-        <li class="list-group-item"><a href="/city/plano">Plano</a></li>
-        <li class="list-group-item"><a href="/city/spokane">Spokane</a></li>
-        <li class="list-group-item"><a href="/city/staten-island">Staten Island</a></li>
+        <li class="list-group-item"><a href="/california/riverside">Riverside</a></li>
+        <li class="list-group-item"><a href="/arkansas/little-rock">Little Rock</a></li>
+        <li class="list-group-item"><a href="/carolina/greenville">Greenville</a></li>
+        <li class="list-group-item"><a href="/tennessee/chattanooga">Chattanooga</a></li>
+        <li class="list-group-item"><a href="/alaska/anchorage">Anchorage</a></li>
+        <li class="list-group-item"><a href="/wisconsin/madison">Madison</a></li>
+        <li class="list-group-item"><a href="/california/anaheim">Anaheim</a></li>
+        <li class="list-group-item"><a href="/florida/hialeah">Hialeah</a></li>
+        <li class="list-group-item"><a href="/texas/plano">Plano</a></li>
+        <li class="list-group-item"><a href="/washington/spokane">Spokane</a></li>
+        <li class="list-group-item"><a href="/new-york/staten-island">Staten Island</a></li>
       </ul> 
  </div>
   <div class="col">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a href="/city/birmingham">Birmingham</a></li>
-        <li class="list-group-item"><a href="/city/fresno">Fresno</a></li>
-        <li class="list-group-item"><a href="/city/fort-lauderdale">Fort Lauderdale</a></li>
-        <li class="list-group-item"><a href="/city/omaha">Omaha</a></li>
-        <li class="list-group-item"><a href="/city/colorado-springs">Colorado Springs</a></li>
-        <li class="list-group-item"><a href="/city/kansas-city">Kansas City</a></li>
-        <li class="list-group-item"><a href="/city/buffalo">Buffalo</a></li>
-        <li class="list-group-item"><a href="/city/detroit">Detroit</a></li>
-        <li class="list-group-item"><a href="/city/rochester">Rochester</a></li>
-        <li class="list-group-item"><a href="/city/el-paso">El Paso</a></li>
-        <li class="list-group-item"><a href="/city/knoxville">Knoxville</a></li>
+        <li class="list-group-item"><a href="/alabama/birmingham">Birmingham</a></li>
+        <li class="list-group-item"><a href="/california/fresno">Fresno</a></li>
+        <li class="list-group-item"><a href="/florida/fort-lauderdale">Fort Lauderdale</a></li>
+        <li class="list-group-item"><a href="/nebraska/omaha">Omaha</a></li>
+        <li class="list-group-item"><a href="/colorado/colorado-springs">Colorado Springs</a></li>
+        <li class="list-group-item"><a href="/missouri/kansas-city">Kansas City</a></li>
+        <li class="list-group-item"><a href="/new-york/buffalo">Buffalo</a></li>
+        <li class="list-group-item"><a href="/michigan/detroit">Detroit</a></li>
+        <li class="list-group-item"><a href="/new-york/rochester">Rochester</a></li>
+        <li class="list-group-item"><a href="/texas/el-paso">El Paso</a></li>
+        <li class="list-group-item"><a href="/tennessee/knoxville">Knoxville</a></li>
       </ul> 
  </div>
  <div class="col">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a href="/city/santa-ana">Santa Ana</a></li>
-        <li class="list-group-item"><a href="/city/mobile">Mobile</a></li>
-        <li class="list-group-item"><a href="/city/reno">Reno</a></li>
-        <li class="list-group-item"><a href="/city/saint-petersburg">Saint Petersburg</a></li>
-        <li class="list-group-item"><a href="/city/tallahassee">Tallahassee</a></li>
-        <li class="list-group-item"><a href="/city/arlington">Arlington</a></li>
-        <li class="list-group-item"><a href="/city/vancouver">Vancouver</a></li>
-        <li class="list-group-item"><a href="/city/fort-wayne">Fort Wayne</a></li>
+        <li class="list-group-item"><a href="/california/santa-ana">Santa Ana</a></li>
+        <li class="list-group-item"><a href="/alabama/mobile">Mobile</a></li>
+        <li class="list-group-item"><a href="/nevada/reno">Reno</a></li>
+        <li class="list-group-item"><a href="/florida/saint-petersburg">Saint Petersburg</a></li>
+        <li class="list-group-item"><a href="/florida/tallahassee">Tallahassee</a></li>
+        <li class="list-group-item"><a href="/texas/arlington">Arlington</a></li>
+        <li class="list-group-item"><a href="/washington/vancouver">Vancouver</a></li>
+        <li class="list-group-item"><a href="/indiana/fort-wayne">Fort Wayne</a></li>
       </ul> 
  </div> 
